--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "start":"app.js"
+    "start": "app.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "express-fileupload": "^1.5.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10"
   }
 }
